# Flow-Classification-Pipeline

./: README.md
pipeline/: pyproject.toml
pipeline/GunnarFarnebackRewardModel/: GunnarFarnebackRewardModel.ckpt.index
pipeline/GunnarFarnebackRewardModel/GunnarFarnebackRewardModel TEST EVENTS/: events.out.tfevents.1601844493.ai-Nitro-AN515-52
pipeline/GunnarFarnebackRewardModel/GunnarFarnebackRewardModel TRAIN EVENTS/: events.out.tfevents.1601844493.ai-Nitro-AN515-52
pipeline/GunnerFarnebackRewardModel/: GunnerFarnebackRewardModel.ckpt.data-00000-of-00001
pipeline/flappy-bird-dataset/: pyproject.toml
pipeline/flappy-bird-dataset/flappy_bird_dataset/: __init__.py  load.py
pipeline/gunnar-farneback-reward-model/: pyproject.toml
pipeline/gunnar-farneback-reward-model/gunnar_farneback_reward_model/: __init__.py
pipeline/gunner-farneback-reward-model/: pyproject.toml
pipeline/gunner-farneback-reward-model/gunner_farneback_reward_model/: __init__.py
pipeline/lucas-kanade-model/: pyproject.toml
pipeline/lucas-kanade-model/lucas_kanade_model/: __init__.py
pipeline/pipeline/: __init__.py  config.py  exceptions.py  flow.py  losses.py  metrics.py  model.py  pipeline.py
pipeline/reward-model/: pyproject.toml
pipeline/reward-model/reward_model/: __init__.py
