[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6"
tensorflow = "1.15.3"
opencv-python = "^4.4.0.44"
reward-model = { path = "reward-model/" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
