[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.8"
tensorflow-gpu = "2.2.0"
opencv-python = "^4.4.0.44"
gunner-farneback-reward-model = { path = "gunnar-farneback-reward-model/" }
flappy-bird-dataset = { path = "flappy-bird-dataset/" }
tqdm = "^4.50.0"
scikit-image = "^0.17.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
