[tool.poetry]
name = "flappy-bird-dataset"
version = "0.1.0"
description = ""
authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.8"
opencv-python = "^4.4.0.44"
scikit-learn = "^0.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
