[tool.poetry]
name = "gunner-farneback-reward-model"
version = "0.1.0"
description = ""
authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.8"
opencv-python = "^4.4.0.44"
flappy-bird-dataset = { path = "../flappy-bird-dataset/" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
